--- a/home.html
+++ b/home.html
@@ -5,7 +5,97 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Your Website</title>
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <style>
+        /* styles.css */
+        body {
+            margin: 0;
+            font-family: 'Pacifico', cursive;
+            background-color: #caf0f8; /* Pale white background */
+        }
+
+        header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 20px;
+            background: transparent;
+            position: fixed;
+            width: 100%;
+            z-index: 10;
+        }
+
+        .logo img {
+            height: 50px;
+        }
+
+        nav ul {
+            list-style: none;
+            display: flex;
+            gap: 20px;
+            margin: 0;
+            padding: 0;
+        }
+
+        nav ul li {
+            font-size: 18px;
+        }
+
+        nav ul li a {
+            color: black;
+            text-decoration: none;
+        }
+
+        main {
+            text-align: center;
+            padding: 50px;
+        }
+
+        .home {
+            min-height: 100vh;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            position: relative;
+        }
+
+        .background-text {
+            position: absolute;
+            font-size: 10rem;
+            color: #000000;
+            z-index: -1;
+        }
+
+        .image-grid {
+            display: grid;
+            grid-template-columns: repeat(4, 1fr);
+            grid-template-rows: repeat(2, 1fr);
+            gap: 20px;
+            width: 80%;
+            margin: auto;
+        }
+
+        .image-grid img {
+            width: 100%;
+            border-radius: 50px;
+            transition: transform 0.3s;
+        }
+
+        .image-grid img:hover {
+            transform: scale(0.9);
+        }
+
+        @media (max-width: 768px) {
+            .image-grid {
+                grid-template-columns: 1fr;
+                grid-template-rows: repeat(8, 1fr);
+            }
+
+            .image-grid img {
+                width: 100%;
+            }
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -43,128 +133,32 @@
             </div>
         </section>
     </main>
-    <script src="script.js"></script>
-</body>
-</html>
+    <script>
+        // script.js
+        window.addEventListener('scroll', () => {
+            const images = document.querySelectorAll('.image-grid img');
+            const scrollPos = window.scrollY;
 
-<style>
-/* styles.css */
-body {
-    margin: 0;
-    font-family: 'Pacifico', cursive;
-    background-color: #caf0f8; /* Pale white background */
-}
+            images.forEach((img, index) => {
+                const row = Math.floor(index / 4);
+                const col = index % 4;
+                const height = img.clientHeight;
 
-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 20px;
-    background: transparent;
-    position: fixed;
-    width: 100%;
-    z-index: 10;
-}
+                if (col === 0 || col === 2) {
+                    img.style.transform = `translateY(-${scrollPos * 0.5 % height}px)`;
+                } else {
+                    img.style.transform = `translateY(${scrollPos * 0.5 % height}px)`;
+                }
+            });
+        });
 
-.logo img {
-    height: 50px;
-}
+        setInterval(() => {
+            const images = document.querySelectorAll('.image-grid img');
 
-nav ul {
-    list-style: none;
-    display: flex;
-    gap: 20px;
-    margin: 0;
-    padding: 0;
-}
-
-nav ul li {
-    font-size: 18px;
-}
-
-nav ul li a {
-    color: black;
-    text-decoration: none;
-}
-
-main {
-    text-align: center;
-    padding: 50px;
-}
-
-.home {
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-}
-
-.background-text {
-    position: absolute;
-    font-size: 10rem;
-    color: #000000;
-    z-index: -1;
-}
-
-.image-grid {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(2, 1fr);
-    gap: 20px;
-    width: 80%;
-    margin: auto;
-}
-
-.image-grid img {
-    width: 100%;
-    border-radius: 50px;
-    transition: transform 0.3s;
-}
-
-.image-grid img:hover {
-    transform: scale(0.95);
-}
-@media (max-width: 768px) {
-    .image-grid {
-        grid-template-columns: 1fr;
-        grid-template-rows: repeat(8, 1fr);
-    }
-
-    .image-grid img {
-        width: 100%;
-    }
-}
-</style>
-<script>
-    // script.js
-let currentIndex = 0;
-
-function showSlides() {
-    const slides = document.querySelector('.slides');
-    const totalSlides = slides.children.length;
-
-    slides.style.transform = `translateX(-${currentIndex * 100}%)`;
-    currentIndex = (currentIndex + 1) % totalSlides;
-}
-
-setInterval(showSlides, 3000); // Change slide every 3 seconds
-// script.js
-window.addEventListener('scroll', () => {
-    const images = document.querySelectorAll('.image-grid img');
-    const scrollPos = window.scrollY;
-
-    images.forEach((img, index) => {
-        if (index < 4) {
-            img.style.transform = `translateY(-${scrollPos * 0.5}px)`;
-        } else {
-            img.style.transform = `translateY(${scrollPos * 0.5}px)`;
-        }
-    });
-});
-
-
-</script>
+            images.forEach((img, index) => {
+                img.style.transform = `translateY(${Math.random() * 10}px)`;
+            });
+        }, 3000); // Adjust the interval as needed
+    </script>
 </body>
 </html>
