--- a/home.html
+++ b/home.html
@@ -3,181 +3,266 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Website</title>
-    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+    <title>La-monje</title>
     <style>
-        /* styles.css */
-        body {
-            margin: 0;
-            font-family: 'Pacifico', cursive;
-            background-color: #caf0f8; /* Pale white background */
-            overflow-x: hidden; /* Prevent horizontal scrolling */
-        }
+        @import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
 
-        header {
-            display: flex;
-            justify-content: space-between; /* Align logo and nav to opposite sides */
-            align-items: center;
-            padding: 20px;
-            background: transparent;
-            position: fixed;
-            width: 100%;
-            z-index: 10;
-            left: 0;
-            right: 0; /* Center header */
-        }
-
-        .logo {
-            margin-left: 20px; /* Adjust logo margin */
-        }
-
-        .logo img {
-            height: 50px;
-        }
-
-        nav ul {
-            list-style: none;
-            display: flex;
-            gap: 20px; /* Increased gap for better touch area */
+        * {
             margin: 0;
             padding: 0;
-            margin-right: 20px; /* Adjust right margin */
+            box-sizing: border-box;
         }
 
-        nav ul li {
-            font-size: 18px;
+        body, html {
+            height: 100%;
+            font-family: 'Pacifico', cursive;
+            overflow: hidden;
         }
 
-        nav ul li a {
-            color: black;
-            text-decoration: none;
-            padding: 10px; /* Adjust padding for better touch area */
+        /* Loading Screen */
+        .loading {
+            position: fixed;
+            width: 100%;
+            height: 100%;
+            background-color: #f5f5f5;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            z-index: 10;
+            transition: opacity 0.5s ease-out;
         }
 
-        main {
-            text-align: center;
-            padding: 50px;
-            width: 100%; /* Full width */
-            max-width: 1440px; /* Maximum width */
-            margin: auto; /* Center the content horizontally */
-            position: relative; /* Ensure positioning context */
-            overflow-y: auto; /* Enable vertical scrolling */
-            padding-top: 120px; /* Ensure space for navigation */
+        .loading.hidden {
+            opacity: 0;
+            pointer-events: none;
         }
 
-        .home {
-            min-height: 100vh;
+        .loading h1 {
+            font-size: 3rem;
+        }
+
+        .loading .loader {
+            margin-top: 20px;
+            border: 8px solid #f3f3f3;
+            border-radius: 50%;
+            border-top: 8px solid #3498db;
+            width: 60px;
+            height: 60px;
+            -webkit-animation: spin 2s linear infinite;
+            animation: spin 2s linear infinite;
+        }
+
+        @-webkit-keyframes spin {
+            0% { -webkit-transform: rotate(0deg); }
+            100% { -webkit-transform: rotate(360deg); }
+        }
+
+        @keyframes spin {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
+        }
+
+        /* Navigation Bar */
+        .nav-bar {
+            position: fixed;
+            top: 0;
+            width: 100%;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 10px 20px;
+            z-index: 5;
+        }
+
+        .nav-bar .logo {
+            font-size: 1.5rem;
+        }
+
+        .nav-bar .menu-toggle {
+            font-size: 1.5rem;
+            cursor: pointer;
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            position: relative;
         }
 
-        .background-text {
-            position: absolute;
-            font-size: 10rem;
-            color: #000000;
-            z-index: -1;
-            top: 50%; /* Center vertically */
-            left: 50%; /* Center horizontally */
-            transform: translate(-50%, -50%); /* Center text */
+        .nav-bar .menu-toggle span {
+            height: 2px;
+            width: 25px;
+            background: black;
+            margin: 4px 0;
+            transition: 0.4s;
         }
 
-        .image-grid {
-            display: grid;
-            grid-template-columns: repeat(4, 250px); /* Adjust column width */
-            grid-template-rows: repeat(8, 315px); /* Adjust row height */
-            gap: 20px; /* Increased gap */
-            width: 100%; /* Full width */
-            max-width: 1000px; /* Maximum grid width */
-            margin: auto; /* Center the grid horizontally */
-            margin-left: 20px; /* Adjust left margin */
+        .nav-bar .menu-toggle.open span:nth-child(1) {
+            transform: rotate(-45deg) translate(-5px, 6px);
         }
 
-        .image-grid img {
+        .nav-bar .menu-toggle.open span:nth-child(2) {
+            opacity: 0;
+        }
+
+        .nav-bar .menu-toggle.open span:nth-child(3) {
+            transform: rotate(45deg) translate(-5px, -6px);
+        }
+
+        .nav-menu {
+            position: fixed;
+            top: 0;
+            left: 0;
             width: 100%;
             height: 100%;
-            border-radius: 20px;
+            background: black;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            transition: opacity 0.5s ease;
+            opacity: 0;
+            pointer-events: none;
+            z-index: 4;
+        }
+
+        .nav-menu.open {
+            opacity: 1;
+            pointer-events: auto;
+        }
+
+        .nav-menu a {
+            color: white;
+            font-size: 2rem;
+            text-decoration: none;
+            margin: 15px 0;
+        }
+
+        /* Pinterest-like Layout */
+        .pinterest-layout {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+            grid-auto-rows: 250px;
+            gap: 10px;
+            overflow: hidden;
+            z-index: 1;
+        }
+
+        .pinterest-layout .item {
+            background: lightgrey;
+            border-radius: 10px;
+            overflow: hidden;
             transition: transform 0.3s;
-            object-fit: cover; /* Maintain aspect ratio */
         }
 
-        .image-grid img:hover {
-            transform: scale(0.9);
+        .pinterest-layout .item:hover {
+            transform: scale(1.05);
         }
 
-        @media (max-width: 768px) {
-            header {
-                padding: 10px; /* Reduced padding for mobile */
-            }
-
-            .logo {
-                margin-left: 10px; /* Adjust logo margin */
-            }
-
-            nav ul {
-                flex-direction: column;
-                gap: 10px; /* Decreased gap for mobile */
-                align-items: flex-end; /* Align nav items to right corner */
-                margin-right: 10px; /* Adjust right margin */
-            }
-
-            nav ul li {
-                font-size: 16px; /* Reduced font size for mobile */
-            }
-
-            main {
-                padding-top: 100px; /* Adjust top padding for mobile */
-            }
-
-            .image-grid {
-                grid-template-columns: 1fr; /* Single column layout */
-                grid-template-rows: repeat(16, 1fr); /* Adjust row count */
-                width: 100%; /* Full width */
-                max-width: none; /* No max width on mobile */
-                padding: 20px; /* Add padding for better spacing */
-                margin-left: 10px; /* Adjust left margin */
-            }
+        /* Infinite Scroll */
+        .scrolling-wrapper {
+            overflow: auto;
+            width: 100%;
+            height: 100%;
+            display: flex;
+            flex-wrap: wrap;
         }
     </style>
 </head>
 <body>
-    <header>
-        <div class="logo">
-            <img src="lamonjelogo.png" alt="Logo">
+    <!-- Loading Screen -->
+    <div class="loading" id="loadingScreen">
+        <div>
+            <h1>La-monje</h1>
+            <p>tell your story</p>
+            <div class="loader"></div>
         </div>
-        <nav>
-            <ul>
-                <li><a href="#work">Work</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#connect">Connect</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <section class="home">
-            <h1 class="background-text">La-monje</h1>
-            <div class="image-grid">
-                <img src="aid2.jpg" alt="Image 1">
-                <img src="aid4.jpg" alt="Image 2">
-                <img src="bazaar1.jpg" alt="Image 3">
-                <img src="bazaar2.jpg" alt="Image 4">
-                <img src="bazaar4.jpg" alt="Image 5">
-                <img src="bazaar11.png" alt="Image 6">
-                <img src="fashion1.png" alt="Image 7">
-                <img src="fashion7.png" alt="Image 8">
-                <img src="psy4.jpg" alt="Image 9">
-                <img src="psy11.jpg" alt="Image 10">
-                <img src="psy12.jpg" alt="Image 11">
-                <img src="psy13.jpg" alt="Image 12">
-                <img src="psy15.jpg" alt="Image 13">
-                <img src="psy16.jpg" alt="Image 14">
-                <img src="psy17.jpg" alt="Image 15">
-                <img src="psy18.jpg" alt="Image 16">
-                <!-- Add more images as needed -->
-            </div>
-        </section>
-    </main>
+    </div>
+
+    <!-- Navigation Bar -->
+    <div class="nav-bar">
+        <div class="logo" id="logo">La-monje</div>
+        <div class="menu-toggle" id="menuToggle">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+    </div>
+
+    <!-- Navigation Menu -->
+    <div class="nav-menu" id="navMenu">
+        <a href="#">Projects</a>
+        <a href="#">About</a>
+        <a href="#">Connect</a>
+    </div>
+
+    <!-- Pinterest-like Layout -->
+    <div class="scrolling-wrapper" id="scrollingWrapper">
+        <div class="pinterest-layout" id="pinterestLayout">
+            <!-- Example items (replace with your images/videos) -->
+            <div class="item" style="background-image: url('image1.jpg');"></div>
+            <div class="item" style="background-image: url('image2.jpg');"></div>
+            <!-- Add 30+ items here -->
+        </div>
+    </div>
+
+    <script>
+        // Loading Screen
+        window.addEventListener('load', () => {
+            setTimeout(() => {
+                document.getElementById('loadingScreen').classList.add('hidden');
+            }, 10000); // 10 seconds
+        });
+
+        // Navigation Menu Toggle
+        const menuToggle = document.getElementById('menuToggle');
+        const navMenu = document.getElementById('navMenu');
+        const logo = document.getElementById('logo');
+
+        menuToggle.addEventListener('click', () => {
+            menuToggle.classList.toggle('open');
+            navMenu.classList.toggle('open');
+        });
+
+        // Navigate to Home on Logo Click
+        logo.addEventListener('click', () => {
+            window.location.reload(); // Or navigate to the home page
+        });
+
+        // Infinite Scrolling Setup
+        const scrollingWrapper = document.getElementById('scrollingWrapper');
+        let isDown = false;
+        let startX, startY, scrollLeft, scrollTop;
+
+        scrollingWrapper.addEventListener('mousedown', (e) => {
+            isDown = true;
+            startX = e.pageX - scrollingWrapper.offsetLeft;
+            startY = e.pageY - scrollingWrapper.offsetTop;
+            scrollLeft = scrollingWrapper.scrollLeft;
+            scrollTop = scrollingWrapper.scrollTop;
+        });
+
+        scrollingWrapper.addEventListener('mouseleave', () => {
+            isDown = false;
+        });
+
+        scrollingWrapper.addEventListener('mouseup', () => {
+            isDown = false;
+        });
+
+        scrollingWrapper.addEventListener('mousemove', (e) => {
+            if (!isDown) return;
+            e.preventDefault();
+            const x = e.pageX - scrollingWrapper.offsetLeft;
+            const y = e.pageY - scrollingWrapper.offsetTop;
+            const walkX = (x - startX) * 3; // Scroll-fast
+            const walkY = (y - startY) * 3; // Scroll-fast
+            scrollingWrapper.scrollLeft = scrollLeft - walkX;
+            scrollingWrapper.scrollTop = scrollTop - walkY;
+        });
+    </script>
 </body>
 </html>
