--- a/home.html
+++ b/home.html
@@ -24,7 +24,7 @@
             position: fixed;
             width: 100%;
             height: 100%;
-            background-color: #f5f5f5;
+            background-color: #ffd7ba;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -74,8 +74,9 @@
             z-index: 5;
         }
 
-        .nav-bar .logo {
-            font-size: 1.5rem;
+        .nav-bar .logo img {
+            height: 50px;
+            cursor: pointer;
         }
 
         .nav-bar .menu-toggle {
@@ -134,6 +135,22 @@
             font-size: 2rem;
             text-decoration: none;
             margin: 15px 0;
+            position: relative;
+            display: inline-block;
+            padding-right: 20px;
+        }
+
+        .nav-menu a:after {
+            content: '→';
+            position: absolute;
+            right: 0;
+            opacity: 0;
+            transition: opacity 0.3s, right 0.3s;
+        }
+
+        .nav-menu a:hover:after {
+            opacity: 1;
+            right: -10px;
         }
 
         /* Pinterest-like Layout */
@@ -145,7 +162,7 @@
             height: 100%;
             display: grid;
             grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-            grid-auto-rows: 250px;
+            grid-auto-rows: masonry;
             gap: 10px;
             overflow: hidden;
             z-index: 1;
@@ -153,7 +170,6 @@
 
         .pinterest-layout .item {
             background: lightgrey;
-            border-radius: 10px;
             overflow: hidden;
             transition: transform 0.3s;
         }
@@ -184,7 +200,9 @@
 
     <!-- Navigation Bar -->
     <div class="nav-bar">
-        <div class="logo" id="logo">La-monje</div>
+        <div class="logo" id="logo">
+            <img src="your-logo-url.png" alt="La-monje Logo">
+        </div>
         <div class="menu-toggle" id="menuToggle">
             <span></span>
             <span></span>
@@ -203,8 +221,37 @@
     <div class="scrolling-wrapper" id="scrollingWrapper">
         <div class="pinterest-layout" id="pinterestLayout">
             <!-- Example items (replace with your images/videos) -->
-            <div class="item" style="background-image: url('image1.jpg');"></div>
-            <div class="item" style="background-image: url('image2.jpg');"></div>
+            <div class="item" style="background-image: url('image1.jpg'); height: 400px;"></div>
+            <div class="item" style="background-image: url('image2.jpg'); height: 250px;"></div>
+            <div class="item" style="background-image: url('image2.jpg'); height: 300px;"></div>
+            <div class="item" style="background-image: url('image2.jpg'); height: 250px;"></div>
+            <div class="item" style="background-image: url('image2.jpg'); height: 400px;"></div>
+            <div class="item" style="background-image: url('image2.jpg'); height: 250px;"></div>
+            <div class="item" style="background-image: url('image2.jpg'); height: 270px;"></div>
+            <div class="item" style="background-image: url('image2.jpg'); height: 350px;"></div>
+            <div class="item" style="background-image: url('image2.jpg'); height: 250px;"></div>
+            <div class="item" style="background-image: url('image2.jpg'); height: 400px;"></div>
+            <div class="item" style="background-image: url('image2.jpg'); height: 250px;"></div>
+            <div class="item" style="background-image: url('image2.jpg'); height: 250px;"></div>
+            <div class="item" style="background-image: url('image2.jpg'); height: 250px;"></div>
+            <div class="item" style="background-image: url('image2.jpg'); height: 250px;"></div>
+            <div class="item" style="background-image: url('image2.jpg'); height: 250px;"></div>
+            <div class="item" style="background-image: url('image2.jpg'); height: 250px;"></div>
+            <div class="item" style="background-image: url('image2.jpg'); height: 250px;"></div>
+            <div class="item" style="background-image: url('image2.jpg'); height: 250px;"></div>
+            <div class="item" style="background-image: url('image2.jpg'); height: 250px;"></div>
+            <div class="item" style="background-image: url('image2.jpg'); height: 250px;"></div>
+            <div class="item" style="background-image: url('image2.jpg'); height: 250px;"></div>
+            <div class="item" style="background-image: url('image2.jpg'); height: 250px;"></div>
+            <div class="item" style="background-image: url('image2.jpg'); height: 250px;"></div>
+            <div class="item" style="background-image: url('image2.jpg'); height: 250px;"></div>
+            <div class="item" style="background-image: url('image2.jpg'); height: 250px;"></div>
+            <div class="item" style="background-image: url('image2.jpg'); height: 250px;"></div>
+            <div class="item" style="background-image: url('image2.jpg'); height: 250px;"></div>
+            <div class="item" style="background-image: url('image2.jpg'); height: 250px;"></div>
+            <div class="item" style="background-image: url('image2.jpg'); height: 250px;"></div>
+            <div class="item" style="background-image: url('image2.jpg'); height: 250px;"></div>
+
             <!-- Add 30+ items here -->
         </div>
     </div>
