--- a/home.html
+++ b/home.html
@@ -209,7 +209,7 @@
     <!-- Navigation Bar -->
     <div class="nav-bar">
         <div class="logo" id="logo">
-            <img src="your-logo-url.png" alt="La-monje Logo">
+            <img src="lamonjelogo1.png" alt="La-monje Logo">
         </div>
         <div class="menu-toggle" id="menuToggle">
             <span></span>
