--- a/connect.html
+++ b/connect.html
@@ -1,1 +1,294 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Connect | La-monje</title>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
+
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body, html {
+            height: 100%;
+            font-family: 'Pacifico', cursive;
+            overflow: hidden;
+            background-color: #ff4d6d; /* Set background color */
+        }
+
+        /* Loading Screen */
+        .loading {
+            position: fixed;
+            width: 100%;
+            height: 100%;
+            background-color: #ffd7ba;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            z-index: 10;
+            transition: opacity 0.5s ease-out;
+        }
+
+        .loading.hidden {
+            opacity: 0;
+            pointer-events: none;
+        }
+
+        .loading h1 {
+            font-size: 5rem;
+        }
+
+        .loading p {
+            font-size: 2rem;
+        }
+
+        .loading .loader {
+            margin-top: 20px;
+            border: 12px solid #f3f3f3;
+            border-radius: 50%;
+            border-top: 12px solid #3498db;
+            width: 80px;
+            height: 80px;
+            -webkit-animation: spin 1s linear infinite;
+            animation: spin 1s linear infinite;
+        }
+
+        @-webkit-keyframes spin {
+            0% { -webkit-transform: rotate(0deg); }
+            100% { -webkit-transform: rotate(360deg); }
+        }
+
+        @keyframes spin {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
+        }
+
+        /* Navigation Bar */
+        .nav-bar {
+            position: fixed;
+            top: 0;
+            width: 100%;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 10px 20px;
+            z-index: 5;
+        }
+
+        .nav-bar .logo img {
+            height: 50px;
+            cursor: pointer;
+        }
+
+        .nav-bar .menu-toggle {
+            font-size: 1.5rem;
+            cursor: pointer;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .nav-bar .menu-toggle span {
+            height: 2px;
+            width: 25px;
+            background: white;
+            margin: 4px 0;
+            transition: 0.4s;
+        }
+
+        .nav-bar .menu-toggle.open span:nth-child(1) {
+            transform: rotate(-45deg) translate(-5px, 6px);
+        }
+
+        .nav-bar .menu-toggle.open span:nth-child(2) {
+            opacity: 0;
+        }
+
+        .nav-bar .menu-toggle.open span:nth-child(3) {
+            transform: rotate(45deg) translate(-5px, -6px);
+        }
+
+        .nav-menu {
+            position: fixed;
+            top: 0;
+            right: 0; /* Adjusted to align with the right side */
+            width: 50%; /* Adjust width as needed */
+            height: 100%;
+            background: black;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            transition: opacity 0.5s ease;
+            opacity: 0;
+            pointer-events: none;
+            z-index: 4;
+        }
+
+        .nav-menu.open {
+            opacity: 1;
+            pointer-events: auto;
+        }
+
+        .nav-menu a {
+            color: white;
+            font-size: 2rem;
+            text-decoration: none;
+            margin: 15px 0;
+            position: relative;
+            display: inline-block;
+            padding-right: 20px;
+        }
+
+        .nav-menu a:after {
+            content: '→';
+            position: absolute;
+            right: 0;
+            opacity: 0;
+            transition: opacity 0.3s, right 0.3s;
+        }
+
+        .nav-menu a:hover:after {
+            opacity: 1;
+            right: -10px;
+        }
+
+        /* Contact Section Styles */
+        .contact-section {
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
+            height: 80vh; /* Adjust height as needed */
+            padding: 50px;
+        }
+
+        .contact-section .contact-details {
+            flex: 1;
+            color: white;
+            text-align: left;
+        }
+
+        .contact-section h2 {
+            font-size: 3rem;
+            margin-bottom: 20px;
+            color: white;
+        }
+
+        .contact-section p {
+            font-size: 1.5rem;
+            margin-bottom: 20px;
+        }
+
+        .contact-section .social-links {
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
+            margin-top: 20px;
+        }
+
+        .contact-section .social-links a {
+            color: white;
+            text-decoration: none;
+            font-size: 1.5rem;
+            margin: 0 10px;
+            transition: color 0.3s ease;
+        }
+
+        .contact-section .social-links a:hover {
+            color: lightgrey;
+        }
+
+        .copyright {
+            position: fixed;
+            bottom: 20px;
+            left: 50%;
+            transform: translateX(-50%);
+            color: white;
+            font-size: 1.2rem;
+        }
+    </style>
+</head>
+<body>
+    <!-- Loading Screen -->
+    <div class="loading" id="loadingScreen">
+        <div>
+            <h1>La-monje</h1>
+            <p>tell your story</p>
+            <div class="loader"></div>
+        </div>
+    </div>
+
+    <!-- Navigation Bar -->
+    <div class="nav-bar">
+        <div class="logo" id="logo">
+            <img src="lamonjelogo1.png" alt="La-monje Logo">
+        </div>
+        <div class="menu-toggle" id="menuToggle">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+    </div>
+
+    <!-- Navigation Menu -->
+    <div class="nav-menu" id="navMenu">
+        <a href="#">Projects</a>
+        <a href="#">About</a>
+        <a href="#">Connect</a>
+    </div>
+
+    <!-- Contact Section -->
+    <div class="contact-section">
+        <div class="contact-details">
+            <h2>Tell Your Story</h2>
+            <p>Contact us via:</p>
+            <p>Email: contact@lamonje.com</p>
+            <p>Phone: +1 123 456 7890</p>
+            <p>Mobile: +1 987 654 3210</p>
+            <div class="social-links">
+                <a href="#">Instagram</a>
+                <a href="#">Facebook</a>
+            </div>
+        </div>
+        <div class="contact-image">
+            <!-- Replace with your image -->
+            <img src="your-image.jpg" alt="Contact Image" style="height: 100%; width: auto;">
+        </div>
+    </div>
+
+    <!-- Copyright -->
+    <div class="copyright">
+        &copy; 2024 La-monje
+    </div>
+
+    <script>
+        // Loading Screen
+        window.addEventListener('load', () => {
+            const loadingScreen = document.getElementById('loadingScreen');
+            loadingScreen.classList.add('hidden');
+            setTimeout(() => loadingScreen.style.display = 'none', 500);
+        });
+
+        // Navigation Toggle
+        const menuToggle = document.getElementById('menuToggle');
+        const navMenu = document.getElementById('navMenu');
+        const logo = document.getElementById('logo');
+
+        menuToggle.addEventListener('click', () => {
+            navMenu.classList.toggle('open');
+            menuToggle.classList.toggle('open');
+        });
+
+        logo.addEventListener('click', () => {
+            window.location.href = 'index.html'; // Link to your home page
+        });
+    </script>
+</body>
+</html>
 
