--- a/connect.html
+++ b/connect.html
@@ -59,7 +59,7 @@
         </div>
     </div>
 <style>
-    body {
+  body {
     margin: 0;
     font-family: 'Playfair Display', serif;
     color: #ffffff;
@@ -119,6 +119,12 @@
     height: 5px;
     background-color: #fff;
     margin: 6px 0;
+    transition: transform 0.2s ease; /* Smooth transition for hamburger menu */
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5); /* Subtle shadow */
+}
+
+.hamburger-menu.active .bar {
+    background-color: white; /* Color change for active menu */
 }
 
 .content {
@@ -150,12 +156,12 @@
 
 .connect-title {
     font-family: 'Ga Maamli', sans-serif;
-    font-size: 8vw;
+    font-size: 10vw; /* Increased font size */
 }
 
 .story-title {
     font-family: 'Playfair Display', serif;
-    font-size: 8vw;
+    font-size: 10vw; /* Increased font size */
     font-weight: 600;
 }
 
@@ -181,6 +187,7 @@
 
 .footer-right a {
     margin-left: 20px;
+    font-size: 3vw; /* Larger font size for footer links */
 }
 
 .overlay {
@@ -208,8 +215,8 @@
 
 .overlay-content a:hover::after {
     content: ' ➔';
-    margin-left: 10px;
-    transition: margin-left 0.2s;
+    margin-left: 5px; /* Smaller margin for calmer effect */
+    transition: margin-left 0.2s ease; /* Smoother transition */
 }
 
 /* Media Queries for Responsiveness */
