--- a/connect.html
+++ b/connect.html
@@ -25,7 +25,7 @@
         </div>
         <div class="content">
             <div class="paragraph">
-                <p>This is a 3-line paragraph that should be centered on the page.</p>
+                <p>Our clients entrust us with the complex task of bringing their stories to life. They understand the power of a well-crafted narrative, and they trust our expertise to navigate the complexities of storytelling across events, content creation, and strategic marketing.</p>
             </div>
             <div class="main-content">
                 <div class="left">
@@ -187,7 +187,7 @@
 
 .footer-right a {
     margin-left: 20px;
-    font-size: 3vw; /* Larger font size for footer links */
+    font-size: 5vw; /* Larger font size for footer links */
 }
 
 .overlay {
@@ -256,7 +256,7 @@
     }
 
     .footer-left, .footer-right a {
-        font-size: 0.8vw;
+        font-size: 1.5vw;
     }
 
     .overlay-content a {
