--- a/home.html
+++ b/home.html
@@ -18,7 +18,6 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            background-color: #333;
             padding: 10px;
             position: sticky;
             top: 0;
@@ -46,15 +45,18 @@
         .image-container img {
             width: 271px;
             height: 592px;
+            border-radius: 30px;
             transition: transform 0.3s ease, filter 0.3s ease;
+            filter: brightness(1);
         }
 
         .image-container img:hover {
+            filter: brightness(1.2);
             transform: scale(0.95);
         }
 
         .image-container img:not(:hover) {
-            filter: brightness(50%);
+            filter: brightness(0.5);
         }
 
         .image-headers {
@@ -65,10 +67,22 @@
         }
 
         .main-text {
-            font-size: 100px;
+            font-size: 150px;
             text-align: center;
             margin: 50px 0;
             color: #FB8500;
+            letter-spacing: 15px;
+        }
+
+        .center-image {
+            display: flex;
+            justify-content: center;
+            margin: 30px 0;
+        }
+
+        .center-image img {
+            width: 300px;
+            height: auto;
         }
 
         .paragraph {
@@ -86,11 +100,12 @@
             color: #FB8500;
             text-decoration: none;
             font-size: 20px;
-            transition: color 0.3s ease;
+            transition: color 0.3s ease, transform 0.3s ease;
         }
 
         .footer a:hover {
             color: #fff;
+            transform: scale(1.1);
         }
 
         @media (max-width: 768px) {
@@ -103,7 +118,7 @@
             }
 
             .main-text {
-                font-size: 50px;
+                font-size: 70px;
             }
 
             .navbar a {
@@ -120,19 +135,22 @@
         <a href="#">Connect</a>
     </div>
     <div class="image-container">
-        <img src="psy4.jpg" alt="Image 1">
-        <img src="psy11.jpg" alt="Image 2">
-        <img src="psy12.jpg" alt="Image 3">
-        <img src="psy15.jpg" alt="Image 4">
+        <img src="hawf.png" alt="Image 1">
+        <img src="psy4.jpg" alt="Image 2">
+        <img src="psy11.jpg" alt="Image 3">
+        <img src="pcf.png" alt="Image 4">
     </div>
     <div class="image-headers">
-        <div>whats up</div>
-        <div>what you</div>
-        <div>want here</div>
-        <div>abel fara</div>
+        <div>Header 1</div>
+        <div>Header 2</div>
+        <div>Header 3</div>
+        <div>Header 4</div>
     </div>
     <div class="main-text">
         L A M O N J E
+    </div>
+    <div class="center-image">
+        <img src="lamonjelogo1.png" alt="Center Image">
     </div>
     <div class="paragraph">
         <p>This is a paragraph that provides more details about LaMonje...</p>
@@ -142,4 +160,3 @@
     </div>
 </body>
 </html>
-
