--- a/home.html
+++ b/home.html
@@ -147,10 +147,10 @@
         <img src="aid.png" alt="Image 4">
     </div>
     <div class="image-headers">
-        <div>hub of africa</div>
-        <div>look up</div>
-        <div>PCF CDE</div>
-        <div>Action aid ethiopia</div>
+        <div>HAWF</div>
+        <div>Look Up</div>
+        <div>PCF EDC</div>
+        <div>Action Aid ethiopia</div>
     </div>
     <div class="main-text">
         L A M O N J E
@@ -159,7 +159,7 @@
         <img src="lamonjelogo1.png" alt="Center Image">
     </div>
     <div class="paragraph">
-        <p>This is a paragraph that provides more details about LaMonje.<br>is is a paragraph that provides more details ab</br>..</p>
+        <p>our clients entrust us with complex task of bringing their stories to life. <br> they understand the power of a well-crafted narrative,, and they trust our expertise<br>to navigate the complexities of story telling across events, contetnt creation and stratagic marketing</p>
     </div>
     <div class="footer">
         <a href="#">Look at our projects <span class="arrow">→</span></a>
