--- a/home.html
+++ b/home.html
@@ -37,15 +37,18 @@
 
         .image-container {
             display: flex;
-            justify-content: space-around;
-            align-items: center;
+            justify-content: flex-start; /* Start images from left on desktop */
+            overflow-x: auto; /* Allow horizontal scrolling */
             margin: 20px 0;
+            padding: 10px; /* Add padding to prevent edge clipping */
+            -webkit-overflow-scrolling: touch; /* Smooth scrolling on iOS */
         }
 
         .image-container img {
             width: 271px;
             height: 592px;
             border-radius: 30px;
+            margin-right: 20px; /* Add spacing between images */
             transition: transform 0.3s ease, filter 0.3s ease;
         }
 
@@ -116,11 +119,21 @@
 
         @media (max-width: 768px) {
             .image-container {
-                flex-direction: column;
+                flex-direction: row; /* Display images in a row */
+                justify-content: flex-start; /* Start images from left */
+                padding: 0; /* Remove padding for mobile */
+                overflow-x: auto; /* Allow horizontal scrolling */
+                -webkit-overflow-scrolling: touch; /* Smooth scrolling on iOS */
+                -ms-overflow-style: -ms-autohiding-scrollbar; /* Hide scrollbar on Edge */
+            }
+
+            .image-container img {
+                margin-right: 10px; /* Adjust spacing between images */
             }
 
             .image-headers {
                 flex-direction: column;
+                align-items: center;
             }
 
             .main-text {
@@ -129,6 +142,10 @@
 
             .navbar a {
                 margin: 0 5px;
+            }
+
+            .paragraph {
+                margin: 30px 20px; /* Adjust margin for paragraph */
             }
         }
     </style>
@@ -159,7 +176,7 @@
         <img src="lamonjelogo1.png" alt="Center Image">
     </div>
     <div class="paragraph">
-        <p>our clients entrust us with complex task of bringing their stories to life. <br> they understand the power of a well-crafted narrative,, and they trust our expertise<br>to navigate the complexities of story telling across events, contetnt creation and stratagic marketing</p>
+        <p>Our clients entrust us with complex tasks of bringing their stories to life.<br> They understand the power of a well-crafted narrative and trust our expertise<br> to navigate the complexities of storytelling across events, content creation, and strategic marketing.</p>
     </div>
     <div class="footer">
         <a href="#">Look at our projects <span class="arrow">→</span></a>
