--- a/connect.html
+++ b/connect.html
@@ -1,1 +1,202 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>LaMonje</title>
+    <link href="https://fonts.googleapis.com/css2?family=Anton&family=Shadows+Into+Light&display=swap" rel="stylesheet">
+    <style>
+        body {
+            background-color: #000000;
+            color: #FB8500;
+            font-family: 'Anton', sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+
+        .navbar {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding: 10px;
+            position: sticky;
+            top: 0;
+            z-index: 1000;
+        }
+
+        .navbar a {
+            color: #FB8500;
+            text-decoration: none;
+            margin: 0 15px;
+            transition: color 0.3s ease;
+        }
+
+        .navbar a:hover {
+            color: #fff;
+        }
+
+        .image-container {
+            display: flex;
+            justify-content: flex-start; /* Start images from left on desktop */
+            overflow-x: auto; /* Allow horizontal scrolling */
+            margin: 20px 0;
+            padding: 10px; /* Add padding to prevent edge clipping */
+            -webkit-overflow-scrolling: touch; /* Smooth scrolling on iOS */
+        }
+
+        .image-block {
+            text-align: center;
+            margin-right: 20px; /* Add spacing between images */
+        }
+
+        .image-block img {
+            width: 271px;
+            height: 592px;
+            border-radius: 30px;
+            transition: transform 0.3s ease, filter 0.3s ease;
+        }
+
+        .image-block img:hover {
+            transform: scale(0.95);
+            filter: brightness(1.2);
+        }
+
+        .image-block .image-caption {
+            color: #FB8500;
+            margin-top: 10px;
+        }
+
+        .main-text {
+            font-size: 150px;
+            text-align: center;
+            margin: 50px 0;
+            color: #FB8500;
+            letter-spacing: 15px;
+        }
+
+        .main-text:hover {
+            animation: flip 0.6s;
+        }
+
+        @keyframes flip {
+            0% {
+                transform: rotateX(0);
+            }
+            100% {
+                transform: rotateX(360deg);
+            }
+        }
+
+        .center-image {
+            display: flex;
+            justify-content: center;
+            margin: 30px 0;
+        }
+
+        .center-image img {
+            width: 300px;
+            height: auto;
+        }
+
+        .paragraph {
+            text-align: center;
+            margin: 50px 20px;
+            color: #FB8500;
+        }
+
+        .footer {
+            text-align: center;
+            margin: 50px 0;
+            font-family: 'Shadows Into Light', cursive;
+        }
+
+        .footer a {
+            color: #FB8500;
+            text-decoration: none;
+            font-size: 30px;
+            display: inline-flex;
+            align-items: center;
+            transition: color 0.3s ease, transform 0.3s ease;
+        }
+
+        .footer a:hover {
+            color: #fff;
+        }
+
+        .footer a .arrow {
+            margin-left: 10px;
+            transition: transform 0.3s ease;
+        }
+
+        .footer a:hover .arrow {
+            transform: translateX(10px);
+        }
+
+        @media (max-width: 768px) {
+            .image-container {
+                flex-direction: row; /* Display images in a row */
+                justify-content: flex-start; /* Start images from left */
+                padding: 0; /* Remove padding for mobile */
+                overflow-x: auto; /* Allow horizontal scrolling */
+                -webkit-overflow-scrolling: touch; /* Smooth scrolling on iOS */
+                -ms-overflow-style: -ms-autohiding-scrollbar; /* Hide scrollbar on Edge */
+            }
+
+            .image-block {
+                margin-right: 10px; /* Adjust spacing between images */
+            }
+
+            .main-text {
+                font-size: 70px;
+            }
+
+            .navbar a {
+                margin: 0 5px;
+            }
+
+            .paragraph {
+                margin: 30px 20px; /* Adjust margin for paragraph */
+            }
+        }
+    </style>
+</head>
+<body>
+    <div class="navbar">
+        <a href="#">Home</a>
+        <a href="#">Projects</a>
+        <a href="#">About</a>
+        <a href="#">Connect</a>
+    </div>
+    <div class="image-container">
+        <div class="image-block">
+            <img src="hawf.png" alt="Image 1">
+            <div class="image-caption">HAWF</div>
+        </div>
+        <div class="image-block">
+            <img src="look.png" alt="Image 2">
+            <div class="image-caption">Look Up</div>
+        </div>
+        <div class="image-block">
+            <img src="pcf.png" alt="Image 3">
+            <div class="image-caption">PCF EDC</div>
+        </div>
+        <div class="image-block">
+            <img src="aid.png" alt="Image 4">
+            <div class="image-caption">Action Aid Ethiopia</div>
+        </div>
+    </div>
+    <div class="main-text">
+        L A M O N J E
+    </div>
+    <div class="center-image">
+        <img src="lamonjelogo1.png" alt="Center Image">
+    </div>
+    <div class="paragraph">
+        <p>Our clients entrust us with complex tasks of bringing their stories to life. <br>They understand the power of a well-crafted narrative and trust our expertise<br> to navigate the complexities of storytelling across events, content creation, and strategic marketing.</p>
+    </div>
+    <div class="footer">
+        <a href="#">Look at our projects <span class="arrow">→</span></a>
+    </div>
+</body>
+</html>
 
